--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -3,28 +3,33 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-D:\FML (At Death's Door)\College\Introduction to Embedded Systems\Project\microwave.uvproj
-Project File Date:  05/03/2022
+D:\#ASU\Repo\Project\microwave.uvproj
+Project File Date:  05/05/2022
 
 <h2>Output:</h2>
-Rebuild target 'Target 1'
-assembling startup_TM4C123.s...
-compiling main.c...
-compiling Switch.c...
-compiling Tiva.c...
-compiling Microwave.c...
+Build target 'Target 1'
 compiling LCD.c...
+LCD.c(23): warning:  #223-D: function "LCD_String" declared implicitly
+        LCD_String(&time);
+LCD.c(108): error:  #159: declaration is incompatible with previous "LCD_String" (declared at line 23)
+  void LCD_String(char *str){   // write a string on LCD
+LCD.c: 1 warning, 1 error
+".\microwave.axf" - 1 Error(s), 1 Warning(s).
+Target not created
+r){   // write a string on LCD
+LCD.c: 1 warning, 1 error
 compiling Keypad.c...
 compiling Buzzer.c...
 compiling Timer.c...
 compiling LED.c...
-compiling Interrupt.c...
-linking...
-Program Size: Code=716 RO-data=636 RW-data=0 ZI-data=608  
-".\microwave.axf" - 0 Error(s), 0 Warning(s).
-upt.c(10): warning:  #1-D: last line of file ends without a newline
-  }
-Interrupt.c: 1 warning, 0 errors
-linking...
-Program Size: Code=716 RO-data=636 RW-data=0 ZI-data=608  
-".\microwave.axf" - 0 Error(s), 2 Warning(s).
+".\microwave.axf" - 1 Error(s), 1 Warning(s).
+Target not created
+at line 22)
+  void LCD_String(char *str){   // write a string on LCD
+LCD.c: 1 warning, 3 errors
+compiling Keypad.c...
+compiling Buzzer.c...
+compiling Timer.c...
+compiling LED.c...
+".\microwave.axf" - 3 Error(s), 1 Warning(s).
+Target not created
