--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -9,17 +9,17 @@ Project File Date:  05/06/2022
 <h2>Output:</h2>
 Build target 'Target 1'
 compiling main.c...
-Microwave.h(5): warning:  #1295-D: Deprecated declaration cook_Popcorn - give arg types
-  void cook_Popcorn();
-Microwave.h(9): warning:  #1295-D: Deprecated declaration Cook_Time - give arg types
-  void Cook_Time();
-Microwave.h(11): warning:  #1-D: last line of file ends without a newline
+linking...
+Program Size: Code=4300 RO-data=652 RW-data=24 ZI-data=512  
+".\microwave.axf" - 0 Error(s), 0 Warning(s).
+</pre>
+</body>
+</html>
+00 RO-data=652 RW-data=24 ZI-data=512  
+".\microwave.axf" - 0 Error(s), 1 Warning(s).
+): warning:  #1-D: last line of file ends without a newline
   #endif
 main.c: 3 warnings, 0 errors
-compiling Microwave.c...
-Microwave.c(86): warning:  #1166-D: returning pointer to local variable
-        return required;}
-Microwave.c: 1 warning, 0 errors
 linking...
-Program Size: Code=4272 RO-data=652 RW-data=24 ZI-data=512  
-".\microwave.axf" - 0 Error(s), 4 Warning(s).
+Program Size: Code=4300 RO-data=652 RW-data=24 ZI-data=512  
+".\microwave.axf" - 0 Error(s), 3 Warning(s).
