--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -12,8 +12,10 @@ compiling Microwave.c...
 linking...
 Program Size: Code=4284 RO-data=652 RW-data=20 ZI-data=516  
 ".\microwave.axf" - 0 Error(s), 0 Warning(s).
-arning, 0 errors
-linking...
+</pre>
+</body>
+</html>
+..
 .\microwave.axf: Error: L6218E: Undefined symbol KayScan (referred from microwave.o).
 Not enough information to list image symbols.
 Finished: 1 information, 0 warning and 1 error messages.
