--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -12,3 +12,6 @@ compiling Microwave.c...
 linking...
 Program Size: Code=4296 RO-data=652 RW-data=20 ZI-data=516  
 ".\microwave.axf" - 0 Error(s), 0 Warning(s).
+</pre>
+</body>
+</html>
